@@ -1,3 +1,7 @@
+2010-11-28 John Wu <John dot Wu at ACM dot org>
+	* examples/tcapi.c: change buildin to builtin, add a repeat of the
+	built-in tests to mimic the test case from Chavdar Kopeov
+
 2010-11-26 John Wu <John dot Wu at ACM dot org>
 	* src/bitvector.cpp:3829 change the test condition to avoid
 	division by 0 (when density is 1)
